Fix inventory highlight on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 }
 
 .btn {
-    @apply sm:mx-1 my-1 py-2 px-4 font-semibold rounded-lg shadow-md disabled:opacity-50 text-sm sm:text-lg;
+    @apply mx-1 my-1 py-2 px-4 font-semibold rounded-lg shadow-md disabled:opacity-50 text-sm sm:text-lg;
 }
 
 @layer utilities {
